fixing error in exports.py where attempted to delete keys from a list. changed to a list comprehension. Also fixed student admin template so that print button points to correct endpoint.

--- a/portality/templates/leaps/admin/student.html
+++ b/portality/templates/leaps/admin/student.html
@@ -5,7 +5,7 @@
 <a id="triggersave" class="btn btn-success" href="#">Save</a>
 {% if record %}
 <a id="triggerdelete" class="btn btn-danger" href="#">Delete</a><br>
-<a class="btn btn-info" href="/admin/export/{{record.id}}.pdf">Print</a>
+<a class="btn btn-info" href="/admin/student/{{record.id}}.pdf">Print</a>
 {% endif %}
 {% endif %}
 {% endblock %}
