--- a/portality/templates/account/login.html
+++ b/portality/templates/account/login.html
@@ -15,6 +15,7 @@
           <input type="submit" value="Login" class="btn btn-primary" />
         </div>
       </form>
+      <p><a href="/account/forgot">Forgot your password? Request a new one.</a></p>
       {% if app.config['PUBLIC_REGISTER'] %}
       <p><br />No account yet? <a href="{{url_for('account.register')}}">Sign up now &raquo;</a></p>
       {% endif %}
