--- a/portality/templates/leaps/admin/datamodel.html
+++ b/portality/templates/leaps/admin/datamodel.html
@@ -60,7 +60,7 @@ jQuery(document).ready(function($) {
     <div class="span12" id="formholder">
     <form action="" id="datamodel" name="datamodel" method="POST" data-validate="parsley">
 
-        {% if current_user.do_admin and model in ['institution'] %}
+        {% if current_user.do_admin and model in ['institution','school'] %}
         <table style="width:100%;">
             <tbody>
     	        <tr>
@@ -69,8 +69,12 @@ jQuery(document).ready(function($) {
                        	<input class="btn btn-success"  type="submit" name="submit" value="Save">
                         {% if record %}
                         <input class="btn btn-danger" type="submit" name="submit" value="Delete">
+                        {% if model == 'institution' %}
+                        <a class="btn" style="margin-top:5px;" href="/universities?institution={{record.data.name}}">View institutional PAEs page</a>
+                        {% else %}
+                        <a class="btn" style="margin-top:5px;" href="/schools?school={{record.data.name}}">View school submissions page</a>
                         {% endif %}
-
+                        {% endif %}
             		</td>
                 </tr>
             </tbody>
