--- a/portality/templates/leaps/exports/index.html
+++ b/portality/templates/leaps/exports/index.html
@@ -6,6 +6,18 @@
 
 {% block content %}
 
+<script>
+jQuery(document).ready(function() {
+    $('.selectall').change(function() {
+        var column = 0;//TODO: this should read which table header it is
+        $('table > tbody > tr').each(function() {
+            // TODO: in the row, find each td in the correct column and check its boxes
+            //$('td', this)[column].find('input').attr('checked', $(this).is(':checked'));
+        });
+    });
+});
+</script>
+
       <div class="row-fluid">
         <div class="span12">
             <h1>Export student records</h1>
@@ -26,10 +38,10 @@
 
 	        <table class="table table-bordered">
 	            <thead>
-	                <th>Student details</th>
-	                <th>School details</th>
-	                <th>More information</th>
-	                <th>Interview details</th>
+	                <th>Student details <span style="font-weight:normal;">( select all <input type="checkbox" class="selectall"> )</span></th>
+	                <th>School details <span style="font-weight:normal;">( select all <input type="checkbox" class="selectall"> )</span></th>
+	                <th>More information <span style="font-weight:normal;">( select all <input type="checkbox" class="selectall"> )</span></th>
+	                <th>Interview details <span style="font-weight:normal;">( select all <input type="checkbox" class="selectall"> )</span></th>
 	            </thead>
 	            <tbody>
         	        <tr>
