--- a/portality/templates/leaps/admin/student.html
+++ b/portality/templates/leaps/admin/student.html
@@ -680,7 +680,7 @@ fieldset{
                 		</td>
                 		{% else %}
                 		<td>
-                		<p style="padding-top:5px;padding-left:5px;"><input type="checkbox" name="application_pae_requested"> request</p>
+                        <select name="application_pae_requested"><option>No</option><option>Yes</option></select>
                 		</td>
                 		{% endif %}
                     </tr>
