adding id to facetview fields

--- a/portality/templates/leaps/admin/students.html
+++ b/portality/templates/leaps/admin/students.html
@@ -64,7 +64,7 @@ jQuery(document).ready(function() {
             {'field':'status.exact', 'display': 'status'},
             {'field':'applications.institution.exact', 'display': 'Application institutions'}
         ],
-        fields: ['last_name', 'first_name', 'date_of_birth','post_code','simd_decile','school','status','archive'],
+        fields: ['last_name', 'first_name', 'date_of_birth','post_code','simd_decile','school','status','archive','id'],
         paging: {
             from: 0,
             size: 20
