--- a/portality/templates/leaps/admin/student.html
+++ b/portality/templates/leaps/admin/student.html
@@ -9,7 +9,7 @@
 <a class="btn" href="/admin/student/{{record.id}}.pdf">Print</a>
 {% endif %}
 
-{% if current_user.view_admin %}
+{% if current_user.view_admin and not current_user.do_admin %}
 <a class="btn" href="/admin/student/{{record.id}}.pdf">Print</a>
 {% endif %}
 
