editing forms to allow for a school and institution called TEST

--- a/portality/templates/leaps/admin/index.html
+++ b/portality/templates/leaps/admin/index.html
@@ -45,7 +45,7 @@
     <div class="span3">
         <div class="alert alert-info" style="min-height:100px;">
             <p><span style="font-size:24px;">{{stats.schools_with_students_submitted}}</span> of the 
-            <span style="font-size:24px;">{{stats.total_schools}}</span> 
+            <span style="font-size:24px;">{{stats.total_schools - 1}}</span> 
             registered schools <br>have had students submit surveys.</p>
             <p><a class="btn btn-info" href="/schools">Go to the schools view</a></p>
         </div>
