editing the email post-PAE now that it is ready to run on live server

--- a/portality/templates/leaps/admin/student.html
+++ b/portality/templates/leaps/admin/student.html
@@ -530,19 +530,19 @@ fieldset{
                 		<td><select name="qualification_year">
                 		    <option></option>
                 		    <option
-                		    {% if record.data.year == "Third year" %} selected="selected"{% endif %}
+                		    {% if qual.year == "Third year" %} selected="selected"{% endif %}
                 		    >Third year</option>
                 		    <option
-                		    {% if record.data.year == "Fourth year" %} selected="selected"{% endif %}
+                		    {% if qual.year == "Fourth year" %} selected="selected"{% endif %}
                 		    >Fourth year</option>
                 		    <option                		    
-                		    {% if record.data.year == "Fifth year" %} selected="selected"{% endif %}
+                		    {% if qual.year == "Fifth year" %} selected="selected"{% endif %}
                             >Fifth year</option>
                 		    <option
-                		    {% if record.data.year == "Sixth year" %} selected="selected"{% endif %}
+                		    {% if qual.year == "Sixth year" %} selected="selected"{% endif %}
                 		    >Sixth year</option>
                 		    <option
-                		    {% if record.data.year == "Other" %} selected="selected"{% endif %}
+                		    {% if qual.year == "Other" %} selected="selected"{% endif %}
                 		    >Other</option>
                 		</select></td>
                 		<td><select name="qualification_level">
